--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <button class="copy" id="copy">Скопировать</button>
     </div>
     <script src="./dist/clipboard.min.js"></script>
+    <script src="./base64.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
